# jsonyx

./: .gitignore  .readthedocs.yaml  README.md  json-patch.schema.json  pyproject.toml  schema.json  setup.py
.github/: dependabot.yml
.github/workflows/: pytest.yml  python-publish.yml
bench/: __main__.py  requirements.txt  sample.json
docs/: requirements.txt
docs/source/: api.rst  benchmark.rst  changelog.rst  cli.rst  conf.py  contents.rst  forword.rst  get-started.rst  getting-started.rst  how-to.rst  index.rst  json-patch-spec.rst  json-path-spec.rst  jsonyx-patch-spec.rst  jsonyx-path-spec.rst  jsonyx-spec.rst  usage.rst
docs/source/_static/: custom.css
docs/source/_templates/: custom-class-template.rst  custom-exception-template.rst  custom-module-template.rst
docs/source/api/: index.rst
docs/source/cli/: index.rst  jsonyx-diff.rst  jsonyx-format.rst  jsonyx-patch.rst  jsonyx.rst
jsonyx/jsonyx/: __init__.py  _accelerator.c  _accelerator.py  _accelerator.pyi  decoder.py  encoder.py  py.typed  scanner.py  tool.py
src/_jsonyx/: __init__.c  __init__.pyi
src/jsonyx/: __init__.py  __main__.py  _accelerator.c  _accelerator.py  _accelerator.pyi  _decoder.py  _differ.py  _encoder.py  _manipulator.py  _patcher.py  _speedups.c  allow.py  patch.py  py.typed  tool.py
src/jsonyx/test/: __init__.py  conftest.py  test_apply_filter.py  test_apply_patch.py  test_dump.py  test_dumps.py  test_jsonyx.py  test_load_query_value.py  test_loads.py  test_make_patch.py  test_paste_values.py  test_run_filter_query.py  test_run_select_query.py  test_select_nodes.py  test_syntax_error.py  test_threading.py  test_write.py
src/jsonyx/test_jsonyx/: __init__.py  test_loads.py
