[project]
name = "jsonyx"
dynamic = ["version"]
authors = [
  { name="Nice Zombies", email="nineteendo19d0@gmail.com" },
]
maintainers = [
  { name="Nice Zombies", email="nineteendo19d0@gmail.com" },
]
description = "Robust JSON manipulator for Python"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["python", "json", "json-parser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
jsonyx = "jsonyx.__main__:main"

[project.urls]
Homepage = "https://github.com/nineteendo/jsonyx"
Changelog = "https://jsonyx.readthedocs.io/en/latest/changelog.html"
Documentation = "https://jsonyx.readthedocs.io"
Issues = "https://github.com/nineteendo/jsonyx/issues"
Sponser = "https://paypal.me/nineteendo"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"