[project]
name = "jsonyx"
version = "2.0.0"
authors = [
    { name="Nice Zombies", email="nineteendo19d0@gmail.com" },
]
maintainers = [
    { name="Nice Zombies", email="nineteendo19d0@gmail.com" },
]
description = "Customizable JSON manipulator for Python"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
keywords = ["python", "json", "json-parser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.scripts]
jsonyx = "jsonyx.__main__:main"

[project.urls]
Homepage = "https://github.com/nineteendo/jsonyx"
Changelog = "https://jsonyx.readthedocs.io/en/latest/changelog.html"
Documentation = "https://jsonyx.readthedocs.io"
Issues = "https://github.com/nineteendo/jsonyx/issues"
Sponser = "https://paypal.me/nineteendo"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
    "ANN401", # any-type
    "C901", # complex-structure
    "CPY001", # missing-copyright-notice
    "DOC201", # docstring-missing-returns
    "DOC501", # docstring-missing-exception
    "FBT001", # boolean-type-hint-positional-argument
    "I001", # unsorted-imports
    "INP001", # implicit-namespace-package
    "PGH003", # blanket-type-ignore
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0915", # too-many-statements
    "PLR0917", # too-many-positional-arguments
    "PLR1702", # too-many-nested-blocks
    "PLR2004", # magic-value-comparison
    "SIM108", # if-else-block-instead-of-if-exp
    "T201", # print
    "TD003", # missing-todo-link
]
preview = true
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"**/test*.py" = ["S101"] # assert
